bk_ida/gccida/c0/get_func_hard_reg_initial_val
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3519:1: error: unknown type name 'initial_value_pair_0'; did you mean 'initial_value_pair'?
initial_value_pair_0 *entries; // rax 
^~~~~~~~~~~~~~~~~~~~
initial_value_pair
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:73:3: note: 'initial_value_pair' declared here
} initial_value_pair;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3534:40: error: expected expression
ivs->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3534:18: error: use of undeclared identifier 'initial_value_pair_0'
ivs->entries = ( initial_value_pair_0 *)xmalloc( 0x50uLL); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3539:40: error: expected expression
ivs->entries = ( initial_value_pair_0 *)xrealloc( ivs->entries, 16LL * ivs->max_entries); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3539:18: error: use of undeclared identifier 'initial_value_pair_0'
ivs->entries = ( initial_value_pair_0 *)xrealloc( ivs->entries, 16LL * ivs->max_entries); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3542:56: error: use of undeclared identifier 'machine_mode'
ivs->entries[ivs->num_entries].pseudo = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/integrate.c:3542:71: error: expected expression
ivs->entries[ivs->num_entries].pseudo = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                                                                      ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_func_hard_reg_initial_val/src/obj/integrate.o] Error 1
